--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -43,24 +43,73 @@
   padding: 40px;
   box-shadow: -2px 0 8px rgba(0, 0, 0, 0.05);
 }
-
 .form-section form {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  align-items: center;
+  gap: 10px;
+  width: 70%;
+}
+
+.floating-input {
+  position: relative;
+  margin: 0.5rem 0;
   width: 100%;
 }
 
-.form-section input {
-  padding: 10px;
-  font-size: 16px;
+.floating-input input {
+  width: 100%;
+  padding: 12px 12px 12px 12px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+}
+
+.floating-input input:focus {
+  border-color: #4f46e5;
+  box-shadow: 0 0 0 2px rgba(79, 70, 229, 0.3);
+}
+
+.floating-input label {
+  position: absolute;
+  left: 12px;
+  top: 14px;
+  color: #aaa;
+  font-size: 1rem;
+  pointer-events: none;
+  transition: all 0.2s ease-out;
+  background: white;
+  padding: 0 4px;
+}
+
+.floating-input input:focus + label,
+.floating-input input:valid + label {
+  top: -8px;
+  left: 8px;
+  font-size: 0.75rem;
+  color: #4f46e5;
+  font-weight: 600;
+}
+
+.floating-input input::placeholder {
+  color: transparent; /* Esconde o placeholder */
+}
+
+.floating-input input:focus::placeholder {
+  color: #aaa; /* Mostra o placeholder quando focado */
 }
 
 .form-section button {
-  padding: 10px;
-  font-size: 16px;
+  padding: 12px 12px; /* igual ao input */
+  font-size: 1rem; /* igual ao input */
   background: #1976d2;
   color: #fff;
   border: none;
   cursor: pointer;
+  width: 106%;
+  border-radius: 4px; /* igual ao input */
+  box-sizing: border-box; /* garante largura igual */
+  position: relative;
+  left: 13px;
 }
