--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -67,7 +67,7 @@
 }
 
 .floating-input input:focus {
-  border-color: #4f46e5;
+  border-color: #4caf93;
   box-shadow: 0 0 0 2px rgba(79, 70, 229, 0.3);
 }
 
@@ -88,7 +88,7 @@
   top: -8px;
   left: 8px;
   font-size: 0.75rem;
-  color: #4f46e5;
+  color: #4caf93;
   font-weight: 600;
 }
 
@@ -103,7 +103,7 @@
 .form-section button {
   padding: 12px 12px; /* igual ao input */
   font-size: 1rem; /* igual ao input */
-  background: #1976d2;
+  background: #4caf93;
   color: #fff;
   border: none;
   cursor: pointer;
